0.9.2009xxxx
	* Added the XKCD example from the Wiki.

	* Fixed apps in examples to use req.scriptURI instead of the
	web-server dependent CGI variable SCRIPT_NAME.

	* Added DOCUMENT_ROOT CGI variable in HTTP mode.

	* Added Java EE Servlet support: ESXX can now run inside
	a J2EE application server, such as Glassfish to Tomcat.

	* XSLT parameters may now be specified via the property
	'params' in the ESXX.Response object.

	* A build.xml file is now included in esxx.war, so it can
	easily be rebuilt with custom content.

	* Added 'esxx.host', which refers to a host object that can be
	set when ESXX is embedded. For instance, If ESXX is deployed as a
	Servlet, 'esxx.host' will refer to that Servlet.

	* Added HTTP filter support. And there was much rejoicing.

	* Property requestMethod is now available on the ESXX.Request
	object.

	* Upgraded to Rhino 1.7 release 2 + patch for bug #477233.

0.9.20090201
	* Fixed bug #14765: req.scriptURI has problems with encoded
	URI:s.

	* Fixed problems with the init script that made chkconfig not
	recognize it.

	* The XMIME/XMTP parser and serializer how handles all text/*
	MIME types, not just text/plain.

	* esxx.include now takes a secondary argument, scope, which
	can be used to specify in what scope the included file should 
	be evaluated in.  If unspecified, the global scope is used
	just like before.

	* When using esxx.include from a function, files are now
	first resolved relative the working directory.

	* esxx.global is now available, and refers to the global
	scope.
	
	* The HTTP protocol handler now simply throws an ESXX.Response
	object if the HTTP status in load(), save(), append() or
	remove() is not 2xx.

	* Added IPS (OpenSolaris) package support, including SVC
	management script and manifest.

	* Added proper PackageMaker (OSX), DEB and RPM support. CPack
	is now only used for the Windows packages.

	* Added ESXX.Response methods: toString(), valueOf() and
	[from Java] getDefaultValue().
